# QEMMeshSimplifier

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  navigating-intrinsic-triangles-pseudocode.md
.github/workflows/: actions.yml
Archive/: README.md
include/: QEMSimplifier.h  QEMSimplifierUtils.h  QEMSimplifierUtils_config.h  parser.h
src/: QEMSimplifier.cpp  QEMSimplifierUtils.cpp  QEMSimplifierUtilsKernel.metal  QEMSimplifierUtils_metal.mm  main  main.cpp  parser.cpp
tests/: NITTests.cpp  ParserTests.cpp  QEMSimplifierTests.cpp  QEMSimplifierUtilsTests.cpp  TestConstants.h
uml/: class-diagram.puml  seq-diagram.puml
